some new func: delete wrong layers and exchange columns

--- a/final variant.ipynb
+++ b/final variant.ipynb
@@ -374,7 +374,7 @@
     }
    ],
    "source": [
-    "grp=pd.read_excel('ГРП new.xlsx',header=[1], index_col=[1])\n",
+    "grp=pd.read_excel('фраклист.xlsx',header=[1], index_col=[1])\n",
     "grp.reset_index(drop=True)\n",
     "grp.reset_index(inplace=True)\n",
     "grp=grp.drop(['Unnamed: 0','Подрядчик','Комментарии','Страница','Unnamed: 6','Азимут'],axis=1)\n",
@@ -1124,7 +1124,7 @@
    ],
    "source": [
     "#обработка и чтение гтм\n",
-    "grp_1=pd.read_excel('ГРП new2.xlsx',header=[1], index_col=[1])\n",
+    "grp_1=pd.read_excel('ГТМ.xlsx',header=[1], index_col=[1])\n",
     "grp_1.reset_index(drop=True)\n",
     "grp_1.reset_index(inplace=True)\n",
     "grp_1=grp_1[grp_1['Скважина'].isin(my_wells_no_repeat)].reset_index(drop=True)\n",
@@ -6462,6 +6462,29 @@
     "    0 if str(x['Тип ГТМ'])=='ВНС'\n",
     "    else x['Число стадий ГРП'], axis=1)\n",
     "sotired_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ю1(1)'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=1\n",
+    "z=sotired_final['Пласт'].value_counts()[:n].index.tolist()\n",
+    "plast=str(z[0])\n",
+    "plast"
    ]
   },
   {
