--- a/number_of_grp_try.ipynb
+++ b/number_of_grp_try.ipynb
@@ -1424,8 +1424,15 @@
    ],
    "source": [
     "grp_number_group = grp_number_group.drop('Наклон', axis=1)\n",
-    "grp_number_group"
+    "grp_number_group\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
