--- a/trying_to_clear_with_'Л'.ipynb
+++ b/trying_to_clear_with_'Л'.ipynb
@@ -2642,14 +2642,14 @@
     "coordinates_f = coordinates_f.drop(['№ скважины'], axis=1)\n",
     "final = grp.merge(coordinates_f, on='Номер скважины')\n",
     "\n",
-    "coordinates_f = coordinates[\n",
-    "            coordinates['№ скважины'].isin(my_wells_no_repeat)].reset_index(drop=True)\n",
-    "coordinates_f = coordinates_f.drop(['Координата X', 'Координата Y', 'Координата забоя Х (по траектории)',\n",
-    "                                        'Координата забоя Y (по траектории)'], axis=1)\n",
-    "new = coordinates_f['№ скважины'].tolist()\n",
-    "coordinates_f['Номер скважины'] = new\n",
-    "coordinates_f = coordinates_f.drop(['№ скважины'], axis=1)\n",
-    "final = grp.merge(coordinates_f, on='Номер скважины')\n",
+    "#coordinates_f = coordinates[\n",
+    "#            coordinates['№ скважины'].isin(my_wells_no_repeat)].reset_index(drop=True)\n",
+    "#coordinates_f = coordinates_f.drop(['Координата X', 'Координата Y', 'Координата забоя Х (по траектории)',\n",
+    "#                                        'Координата забоя Y (по траектории)'], axis=1)\n",
+    "#new = coordinates_f['№ скважины'].tolist()\n",
+    "#coordinates_f['Номер скважины'] = new\n",
+    "#coordinates_f = coordinates_f.drop(['№ скважины'], axis=1)\n",
+    "#final = grp.merge(coordinates_f, on='Номер скважины')\n",
     "final['Длиина ГС, м'] = final.apply(\n",
     "            lambda x:\n",
     "            x['Length'] if x['Наклон'] >= 70\n",
@@ -3273,6 +3273,136 @@
     "grp_gang = grp_gang[~grp_gang['index'].isin(sveta)].reset_index(drop=True)\n",
     "grp_gang = grp_gang.drop(['index'], axis=1)\n",
     "grp_gang.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Скважина</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1125</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1176</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>927</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>971</th>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         index\n",
+       "Скважина      \n",
+       "1007        []\n",
+       "105         []\n",
+       "110         []\n",
+       "1125        []\n",
+       "1176        []\n",
+       "...        ...\n",
+       "907         []\n",
+       "908         []\n",
+       "919         []\n",
+       "927         []\n",
+       "971         []\n",
+       "\n",
+       "[120 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grp_vnski_double"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[79, 93]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sveta"
    ]
   },
   {
@@ -11929,6 +12059,390 @@
     }
    ],
    "source": [
+    "we_here.tail(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Скважина №</th>\n",
+       "      <th>Длина ГС, м</th>\n",
+       "      <th>Число стадий ГРП</th>\n",
+       "      <th>Полудлина трещины, м</th>\n",
+       "      <th>Ширина трещины, мм</th>\n",
+       "      <th>Проницаемость проппанта, Д</th>\n",
+       "      <th>Дата ВНР после ГС \\ ГРП \\ЗБГС</th>\n",
+       "      <th>ГС/ННС</th>\n",
+       "      <th>Тип ГТМ</th>\n",
+       "      <th>Пласт</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>1230_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2013-09-09</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>173Р_ГРП</td>\n",
+       "      <td>235.053185</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2014-07-16</td>\n",
+       "      <td>ГС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>256Р_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2005-03-08</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>2818_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2011-07-21</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>2818_ГРП</td>\n",
+       "      <td>300.123308</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2019-05-03</td>\n",
+       "      <td>ГС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>4100_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2010-10-31</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>463_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2012-08-25</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>463_ГРП</td>\n",
+       "      <td>249.647752</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2014-11-17</td>\n",
+       "      <td>ГС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>5_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2008-03-02</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>5_Л_ФРАК_1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2013-01-04</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>5_ГРП</td>\n",
+       "      <td>346.101141</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2018-05-05</td>\n",
+       "      <td>ГС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>65_Л</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2006-06-22</td>\n",
+       "      <td>ННС</td>\n",
+       "      <td>ВНС</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>79_Л</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2005-10-03</td>\n",
+       "      <td>ННС</td>\n",
+       "      <td>ВНС</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>79_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2007-01-22</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>85_Л</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2006-08-31</td>\n",
+       "      <td>ННС</td>\n",
+       "      <td>ВНС</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>85_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2007-03-16</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>85_Л_ФРАК_1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2014-04-10</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>85_Л_ФРАК_2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2016-09-27</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>85_Л_ФРАК_3</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2016-10-11</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>906_Л_ГРП</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2010-11-26</td>\n",
+       "      <td>ННС+ГРП</td>\n",
+       "      <td>ГРП</td>\n",
+       "      <td>Ю3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Скважина №  Длина ГС, м  Число стадий ГРП  Полудлина трещины, м  \\\n",
+       "159   1230_Л_ГРП     0.000000               1.0                   100   \n",
+       "160     173Р_ГРП   235.053185               1.0                   100   \n",
+       "161   256Р_Л_ГРП     0.000000               1.0                   100   \n",
+       "162   2818_Л_ГРП     0.000000               1.0                   100   \n",
+       "163     2818_ГРП   300.123308               1.0                   100   \n",
+       "164   4100_Л_ГРП     0.000000               1.0                   100   \n",
+       "165    463_Л_ГРП     0.000000               1.0                   100   \n",
+       "166      463_ГРП   249.647752               1.0                   100   \n",
+       "167      5_Л_ГРП     0.000000               1.0                   100   \n",
+       "168   5_Л_ФРАК_1     0.000000               1.0                   100   \n",
+       "169        5_ГРП   346.101141               1.0                   100   \n",
+       "170         65_Л     0.000000               1.0                     0   \n",
+       "171         79_Л     0.000000               1.0                     0   \n",
+       "172     79_Л_ГРП     0.000000               1.0                   100   \n",
+       "173         85_Л     0.000000               1.0                     0   \n",
+       "174     85_Л_ГРП     0.000000               1.0                   100   \n",
+       "175  85_Л_ФРАК_1     0.000000               1.0                   100   \n",
+       "176  85_Л_ФРАК_2     0.000000               1.0                   100   \n",
+       "177  85_Л_ФРАК_3     0.000000               1.0                   100   \n",
+       "178    906_Л_ГРП     0.000000               1.0                   100   \n",
+       "\n",
+       "     Ширина трещины, мм  Проницаемость проппанта, Д  \\\n",
+       "159                   4                         100   \n",
+       "160                   4                         100   \n",
+       "161                   4                         100   \n",
+       "162                   4                         100   \n",
+       "163                   4                         100   \n",
+       "164                   4                         100   \n",
+       "165                   4                         100   \n",
+       "166                   4                         100   \n",
+       "167                   4                         100   \n",
+       "168                   4                         100   \n",
+       "169                   4                         100   \n",
+       "170                   0                           0   \n",
+       "171                   0                           0   \n",
+       "172                   4                         100   \n",
+       "173                   0                           0   \n",
+       "174                   4                         100   \n",
+       "175                   4                         100   \n",
+       "176                   4                         100   \n",
+       "177                   4                         100   \n",
+       "178                   4                         100   \n",
+       "\n",
+       "    Дата ВНР после ГС \\ ГРП \\ЗБГС   ГС/ННС Тип ГТМ Пласт  \n",
+       "159                    2013-09-09  ННС+ГРП     ГРП    Ю3  \n",
+       "160                    2014-07-16   ГС+ГРП     ГРП    Ю3  \n",
+       "161                    2005-03-08  ННС+ГРП     ГРП    Ю3  \n",
+       "162                    2011-07-21  ННС+ГРП     ГРП    Ю3  \n",
+       "163                    2019-05-03   ГС+ГРП     ГРП    Ю3  \n",
+       "164                    2010-10-31  ННС+ГРП     ГРП    Ю3  \n",
+       "165                    2012-08-25  ННС+ГРП     ГРП    Ю3  \n",
+       "166                    2014-11-17   ГС+ГРП     ГРП    Ю3  \n",
+       "167                    2008-03-02  ННС+ГРП     ГРП    Ю3  \n",
+       "168                    2013-01-04  ННС+ГРП     ГРП    Ю3  \n",
+       "169                    2018-05-05   ГС+ГРП     ГРП    Ю3  \n",
+       "170                    2006-06-22      ННС     ВНС    Ю3  \n",
+       "171                    2005-10-03      ННС     ВНС    Ю3  \n",
+       "172                    2007-01-22  ННС+ГРП     ГРП    Ю3  \n",
+       "173                    2006-08-31      ННС     ВНС    Ю3  \n",
+       "174                    2007-03-16  ННС+ГРП     ГРП    Ю3  \n",
+       "175                    2014-04-10  ННС+ГРП     ГРП    Ю3  \n",
+       "176                    2016-09-27  ННС+ГРП     ГРП    Ю3  \n",
+       "177                    2016-10-11  ННС+ГРП     ГРП    Ю3  \n",
+       "178                    2010-11-26  ННС+ГРП     ГРП    Ю3  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "we_here['Число стадий ГРП'] = we_here.apply(\n",
+    "            lambda x:\n",
+    "            1 if 'ФРАК' in str(x['Скважина №'])\n",
+    "            else x['Число стадий ГРП'], axis=1)\n",
     "we_here.tail(20)"
    ]
   }
